[project]
name = "telegramConcertParser"
version = "1.2.0"
description = "A Telegram bot powered by aiogram that parses information about concerts"
authors = [
    {name = "Ap73MKa",email = "artyom.vlasov.05@mail.ru"},
]
dependencies = [
    "aiogram>=3.0.0b8",
    "lxml>=4.9.3",
    "aiohttp>=3.8.5",
    "beautifulsoup4>=4.12.2",
    "validators>=0.20.0",
    "loguru>=0.7.0",
    "rapidfuzz>=3.1.2",
    "aiojobs>=1.1.0",
    "sqlalchemy>=2.0.19",
    "asyncpg>=0.28.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.ruff]
select = ["E", "F", "B", "UP", "I", "PL", "ISC", "RUF"]
unfixable = ["B"]
ignore = ["E501", "RUF001", "B024", "PLR2004", "RUF009", "PLR0913"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
pretty = false
check_untyped_defs = true
warn_redundant_casts = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "pre-commit>=3.3.3",
]
